いろいろ動作追加

--- a/.cheatsheet.md
+++ b/.cheatsheet.md
@@ -55,5 +55,7 @@
 - :ClearBookmark <name> :   ブックマークを指定して削除
 - :ClearAllBookmark     :   ブックマークを全て削除
 
-- <c-a> :NERDTreeToggl
-  - ディレクトリツリーの表示の切り替えをする。
+
+- <c-f>                 :   :NERDTreeFindが動作する(意味があるかわからない) <extend>
+- <c-t>                 :   NERDTreeの表示を切り替える                      <extend>
+- <leader>n             :   NERDTreeにフォーカスする                        <extend>
